Adding home page with css

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
-    <h1>Hello World!</h1>
+
+    <main class="search">
+      <img class="search__img" src="img/logo.svg" alt="NTube logo">
+      
+      <div class="search__input">
+        <input type="text" name="search" id="search" placeholder="Pesquisar" />
+        <button type="button" aria-label="search" name="search">
+          <img src="img/search.svg" alt="search image" />
+        </button>
+      </div>
+
+      <button class="search__btn">Pesquisar</button>
+    </main>
+
+    <footer class="footer">
+      <span>DEV. by Christian</span>
+      <span>UXD. by Pâmela</span>
+    </footer>
+
   </body>
 </html>
