Building home page

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Youtube & Notion</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
@@ -21,6 +24,15 @@
 
       <button class="search__btn">Pesquisar</button>
     </main>
+
+    <section class="github-description">
+      <div class="github-description__card">
+        <span class="github-description__card--title">Olá, se você quiser utilizar essa aplicação no seu notion, fique a vontade para usar o código que se encontra disponível no Github. Colaborações no projeto também são bem vindas. ;)</span>
+        <img class="github-description__logo" src="img/github-logo.png" alt="github logo">
+      </div>
+
+      <!-- <img class="github-description__logo" src="img/github-logo.png" alt="github logo"> -->
+    </section>
 
     <footer class="footer">
       <span>DEV. by Christian</span>
