Including thumbnailSrc and updatedAt on playlists endpoint

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -32,8 +32,9 @@
         Resultados da pesquisa 
       </h2>
       
-      <h3 class="search-result__title search-result__title--primary">
-        Canal 123 
+      <h3 
+        id="channelTitle" 
+        class="search-result__title search-result__title--primary">
       </h3>
 
       <hr />
