--- a/app/public/index.html
+++ b/app/public/index.html
@@ -45,6 +45,8 @@
       </h4>
 
       <ul class="playlists"></ul>
+
+      <div id="the-end"></div>
     </main>
 
     <section class="github-description">
