Modal for creating notion page

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -59,6 +59,30 @@
       <span>UXD. by Pâmela</span>
     </footer>
 
+    <aside class="modal">
+      <section class="modal-content">
+        <div class="modal__header">
+          <img class="modal__header-img" src="img/macbook.svg" alt="Image of a laptop">
+          <h1 class="modal__header-title">Adicionar essa playlist no Notion</h1>
+        </div>
+
+        <footer class="modal__footer">
+          <button 
+            id="add"
+            class="modal__button modal__button--primary"
+          >
+            Adicionar
+          </button>
+          <button 
+            id="cancel"
+            class="modal__button modal__button--secondary"
+          >
+            Cancelar
+          </button>
+        </footer>
+      </section>
+    </aside>
+
     <script src="js/index.js"></script>
   </body>
 </html>
