Incluindo snackbar quando finalizar inclusão da playlist no Notion

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,7 +7,7 @@
     <title>Youtube & Notion</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
@@ -81,6 +81,24 @@
           </button>
         </footer>
       </section>
+    </aside>
+
+    <aside id="snackbar" class="snackbar">
+      <div class="snackbar__wrapper">
+        <p class="snackbar__label">
+          Playlist adicionada na página de estudos notion.
+        </p>
+
+        <div class="snackbar__actions">
+          <button
+            type="button" 
+            class="snackbar__action"
+            id="btn-snackbar-back"
+          >
+            Voltar
+          </button>
+        </div>
+      </div>
     </aside>
 
     <script src="js/index.js"></script>
