Styles for desktop version

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -12,6 +12,19 @@
   </head>
   <body>
 
+    <header class="header">
+      <a href="/">
+        <img id="header-logo" class="header__logo" src="img/logo.svg" alt="NTube logo">
+      </a>
+
+      <a
+        href="https://github.com/christiangustavo/youtube-notion-integration"
+        target="_blank"
+      >
+        <img id="github-logo" class="header__github-logo" src="img/github-logo.png" alt="github logo">
+      </a>
+    </header>
+
     <section class="search">
       <img class="search__img" src="img/logo.svg" alt="NTube logo">
 
@@ -50,8 +63,21 @@
     </main>
 
     <section class="github-description">
-        <span class="github-description__card--title">Olá, se você quiser utilizar essa aplicação no seu notion, fique a vontade para usar o código que se encontra disponível no Github. Colaborações no projeto também são bem vindas. ;)</span>
-        <img class="github-description__logo" src="img/github-logo.png" alt="github logo">
+      <div class="github-description__card">
+        <span class="github-description__card--title">
+          Olá, se você quiser utilizar essa aplicação no seu notion, fique a
+          vontade para usar o código que se encontra disponível no Github, é
+          só clicar nesse ícone do lado. 
+          Colaborações no projeto também são bem vindas. ;)
+        </span>
+        <a
+          class="github-description__logo"
+          href="https://github.com/christiangustavo/youtube-notion-integration"
+          target="_blank"
+        >
+          <img src="img/github-logo.png" alt="github logo">
+        </a>
+      </div>
     </section>
 
     <footer class="footer">
