Fixing header navigation

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -13,7 +13,7 @@
   <body>
 
     <header class="header">
-      <a href="/">
+      <a href="/youtube-notion-integration">
         <img id="header-logo" class="header__logo" src="img/logo.svg" alt="NTube logo">
       </a>
 
@@ -26,9 +26,17 @@
     </header>
 
     <section class="search">
-      <img class="search__img" src="img/logo.svg" alt="NTube logo">
+      <a href="/youtube-notion-integration">
+        <img class="search__img" src="img/logo.svg" alt="NTube logo">
+      </a>
 
-      <img id="github-logo" class="github-description__logo" src="img/github-logo.png" alt="github logo">
+      <a
+        href="https://github.com/christiangustavo/youtube-notion-integration"
+        target="_blank"
+        class="github-description__logo"
+      >
+        <img id="github-logo" class="github-description__logo" src="img/github-logo.png" alt="github logo">
+      </a>
       
       <div class="search__input">
         <input type="text" name="search" id="searchInput" placeholder="Pesquisar" />
