Including loading element for result list and confirm modal

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -67,6 +67,7 @@
 
       <ul class="playlists"></ul>
 
+      <div class="loader text-center"></div>
       <div id="the-end"></div>
     </main>
 
@@ -94,13 +95,13 @@
     </footer>
 
     <aside class="modal">
-      <section class="modal-content">
-        <div class="modal__header">
+      <section id="modal-content" class="modal-content">
+        <div id="modal-header" class="modal__header">
           <img class="modal__header-img" src="img/macbook.svg" alt="Image of a laptop">
           <h1 class="modal__header-title">Adicionar essa playlist no Notion</h1>
         </div>
 
-        <footer class="modal__footer">
+        <footer id="modal-footer" class="modal__footer">
           <button 
             id="add"
             class="modal__button modal__button--primary"
