--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>YoutubeNotionAngular</title>
-  <base href="/">
+  <title>Youtube & Notion</title>
+  <base href="/youtube-notion-integration">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
